[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,8 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! i am the first web app to jegatheshwaran.
+            Hi! i am the first web app to jegatheshwaran
+            how are you guyzzz.
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
