[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,2 +1,25 @@
 <html>
+<head>
+    <title>
+       hi i'm jegatheshwaran: madurai: tamilnadu
+    </title>
+<body>
+    <div>
+        <o hr='/'>Home</o>
+    </div>    
+<hr/>
+<h3>
+    Aug 17 in noida
+</h3>
+<div>
+<p>
+    very irritated noida. no genuine person in the world, All are very well selfiesssss 
+    Someone is there with me they are not humans 
+ </p>
+ <p>
+     whose who are cheating others and who cann't care about others, they are respected by world.
+     who are genuine they are mental in the world
+     </p>
+</div>
+</body>    
 </html>
