--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -3,6 +3,7 @@
     <title>
        hi i'm jegatheshwaran: madurai: tamilnadu
     </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 <body>
     <div>
         <o hr='/'>Home</o>
