[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,20 +4,28 @@
        hi i'm jegatheshwaran: madurai: tamilnadu
     </title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <style>
+    container {
+        max-width: 800px;
+        margin: 0 auto;
+        color: blue;
+        font-family: timesline roman;
+    }
+    </style>
 <body>
-    <div>
+    <div class="container">
         <o hr='/'>Home</o>
     </div>    
-<hr/>
-<h3>
+    <hr/>
+    <h3>
     Aug 17 in noida
-</h3>
-<div>
-<p>
+        </h3>
+   <div>
+      <p>
     very irritated noida. no genuine person in the world, All are very well selfiesssss 
     Someone is there with me they are not humans 
- </p>
- <p>
+    </p>
+    <p>
      whose who are cheating others and who cann't care about others, they are respected by world.
      who are genuine they are mental in the world
      </p>
