--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -9,7 +9,7 @@
         max-width: 800px;
         margin: 0 auto;
         color: red;
-        font-family: timesline roman;
+        font-family: sans-serif;
     }
     </style>
 <body>
