--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -10,6 +10,8 @@
         margin: 0 auto;
         color: red;
         font-family: sans-serif;
+        padding-top: 80px;
+        padding-left: 50px;
     }
     </style>
 <body>
