[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -3,16 +3,10 @@
     <title>
        hi i'm jegatheshwaran: madurai: tamilnadu
     </title>
+     <link href="/ui/style.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <style>
-    .container {
-        max-width: 800px;
-        margin: 0 auto;
-        color: red;
-        font-family: sans-serif;
-        padding-top: 80px;
-        padding-left: 50px;
-    }
+    
     </style>
 <body>
     <div class="container">
