[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -12,6 +12,9 @@
             Hi! i am the first web app to jegatheshwaran
             how are you guyzzz.
         </div>
+        <script>
+        alart(`hi,i'm jegatheshwaran');
+        </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
