--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -4,6 +4,7 @@
        hi i'm jegatheshwaran: madurai: tamilnadu
     </title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+     <link href="/ui/style.css" rel="stylesheet" />
 <body>
     <div>
         <o hr='/'>Home</o>
