--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -5,6 +5,7 @@
     </title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
      <link href="/ui/style.css" rel="stylesheet" />
+</head>     
 <body>
     <div>
         <o hr='/'>Home</o>
@@ -23,7 +24,7 @@
      who are genuine they are mental in the world
      </p>
      <p>
-     this is article two
+     this is article one
      </p>
 </div>
 </body>    
