[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -7,6 +7,7 @@
      <link href="/ui/style.css" rel="stylesheet" />
 </head>     
 <body>
+    <div class="container">
     <div>
         <o hr='/'>Home</o>
     </div>    
@@ -14,6 +15,9 @@
 <h3>
     Aug 17 in noida
 </h3>
+<div>
+    Aug 22
+</div>
 <div>
 <p>
     very irritated noida. no genuine person in the world, All are very well selfiesssss 
@@ -26,6 +30,7 @@
      <p>
      this is article one
      </p>
+</div>
 </div>
 </body>    
 </html>
