[imad-console] Updates ui/article-three.html

--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -1,11 +1,13 @@
- <html>
+<html>
 <head>
     <title>
        hi i'm jegatheshwaran: madurai: tamilnadu
     </title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
      <link href="/ui/style.css" rel="stylesheet" />
+</head>     
 <body>
+    <div class="container">
     <div>
         <o hr='/'>Home</o>
     </div>    
@@ -13,6 +15,9 @@
 <h3>
     Aug 17 in noida
 </h3>
+<div>
+    Aug 22
+</div>
 <div>
 <p>
     very irritated noida. no genuine person in the world, All are very well selfiesssss 
@@ -25,6 +30,7 @@
      <p>
      this is article three
      </p>
+</div>
 </div>
 </body>    
 </html>
