[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -20,12 +20,10 @@
 </div>
 <div>
 <p>
-    very irritated noida. no genuine person in the world, All are very well selfiesssss 
-    Someone is there with me they are not humans 
+     i need to improve my skills
  </p>
  <p>
-     whose who are cheating others and who cann't care about others, they are respected by world.
-     who are genuine they are mental in the world
+     i need to improve my skills
      </p>
      <p>
      this is article one
