[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -13,7 +13,7 @@
             how are you guyzzz.
         </div>
         <script>
-        alart('hi i am jegatheshwaran'):
+        alart('hi i am jegatheshwaran');
         </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
