[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -14,7 +14,7 @@
             i am in success
         </div>
         <script>
-        alart('hi i am jegatheshwaran');
+           alert ('hi i am jegatheshwaran');
         </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
