--- a/ui/index.html
+++ b/ui/index.html
@@ -4,8 +4,9 @@
         <link href = "/ui/style.css" rel= "stylesheet" />
     </head>
     <body>
+        <div class ="container"></div>
         <div class="center">
-            <img id='madi' src="/ui/madi.png" class="img-medium"/>
+            <img id='madi' src="https://plus.google.com/u/0/photos/104535247398802836580/albums/profile/5999248034401748754" class="img-medium"/>
             
         </div>
         <br>
