[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -6,7 +6,7 @@
     <body>
         <div class ="container"></div>
         <div class="center">
-            <img id='madi' src="https://plus.google.com/u/0/photos/104535247398802836580/albums/profile/5999248034401748754" class="img-medium"/>
+            <img id='madi' src="https://pbs.twimg.com/profile_images/894976137499201541/oNc-ZmrH_400x400.jpg" class="img-medium"/>
             
         </div>
         <br>
