--- a/ui/index.html
+++ b/ui/index.html
@@ -7,13 +7,21 @@
         <div class ="container"></div>
         <div class="center">
             <img id='madi' src="https://pbs.twimg.com/profile_images/894976137499201541/oNc-ZmrH_400x400.jpg" class="img-medium"/>
-                    </div>
+         </div>
+         <hr/>
         <br>
-        <div id='main-text' class= "center text-big bold">
-            Hi! i am the first web app to jegatheshwaran
-            <h4> A new heading</h4>
-            i am in success
-        </div>
+        <h3>personal</h3>
+        <div>
+            Hi! i am the first web app to jegatheshwaran in success
+        </div>    
+        <hr/>
+         <hr/>
+        <br>
+        <h3>prefessional</h3>
+        <div>
+            Hi! i am the first web app to jegatheshwaran in success
+        </div>    
+        <hr/>
         <script>
            alert ('hi i am jegatheshwaran');
         </script>
