[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -19,7 +19,7 @@
         <br>
         <h3>prefessional</h3>
         <div>
-            Hi! i am the first web app to jegatheshwaran in success
+            i am Enginnering Graduate
         </div>    
         <hr/>
         <script>
