[imad-console] Updates ui/article-two.html

--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -4,7 +4,7 @@
        hi i'm jegatheshwaran madurai tamilnadu
     </title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-   <link href="/ui/style.css" rel="stylesheet" />
+        <link href="/ui/style.css" rel="stylesheet" />
 </head>     
 <body>
     <div class="container">
@@ -20,15 +20,16 @@
 </div>
 <div>
 <p>
-   i need to improve my skills
+     i need to improve my skills
  </p>
  <p>
-       i need to improve my skills
- </p>
+     i need to improve my skills
+     </p>
      <p>
-     this is article two
+     this is article one
      </p>
 </div>
 </div>
 </body>    
 </html>
+
