--- a/ui/index.html
+++ b/ui/index.html
@@ -18,7 +18,9 @@
         <div>
             i am Enginnering Graduate
         </div>    
-      
+      <div class="footer"> 
+      this button <button id="counter">click me!</button> has been clicked<span id="count">0</span>times
+      </div>
         <script>
            alert ('hi i am jegatheshwaran');
         </script>
