[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html>
-    <head>
-        <link href = "/ui/style.css" real= "stylesheet" />
+    <head> 
+        <link href = "/ui/style.css" rel= "stylesheet" />
     </head>
     <body>
-        <div class ="container"></div>
+        <div class ="container">
         <div class="center">
             <img id='madi' src="https://pbs.twimg.com/profile_images/894976137499201541/oNc-ZmrH_400x400.jpg" class="img-medium"/>
          </div>
@@ -19,11 +19,17 @@
             i am Enginnering Graduate
         </div>    
       <div class="footer"> 
-      this button <button id="counter">click me!</button> has been clicked<span id="count">0</span>times
+      this button <button id="counter">click me!</button> has been clicked <span id="count"> 0 </span>times
+      <br/>
+      <input type ="text" id="name" placeholder="name"></input>
+      <input type ="submit" value="submit"></input>
+      <ul>
+          <li>name1</li>
+          <li>name2</li>
+      </ul>
       </div>
-        <script>
-           alert ('hi i am jegatheshwaran');
-        </script>
+      </div>
+    
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
