--- a/ui/index.html
+++ b/ui/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head> 
-        <link href = "/ui/style.css" rel= "stylesheet" />
+        <link rel= "stylesheet" href = "/ui/style.css"  />
     </head>
     <body>
         <div class ="container">
