--- a/ui/index.html
+++ b/ui/index.html
@@ -22,9 +22,9 @@
       this button <button id="counter">click me!</button> has been clicked <span id="count"> 0 </span>times
       <br/>
       
-      <input type ="text" id="name" placeholder="name" > </input>
-      <input type ="submit" value="submit" id="submit_btn"> </input>
-      <ul id="namelist">
+      <input type ="text" id="name" placeholder="name" > 
+            <input type ="submit" value="submit" id="submit_btn">
+            <ul id="namelist">
       </ul>
       </div>
       </div>
